--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
-        android:text="00:00:00"
+        android:text="@string/_00_00_00"
         android:textColor="#ffffff"
         android:textSize="48sp" />
 
@@ -24,7 +24,7 @@
         android:shadowColor="@color/white"
         android:layout_marginTop="30dp"
         android:layout_centerHorizontal="true"
-        android:text="Start" />
+        android:text="@string/start" />
 
     <Button
         android:id="@+id/stopButton"
@@ -33,7 +33,7 @@
         android:layout_below="@id/startButton"
         android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true"
-        android:text="Stop" />
+        android:text="@string/stop" />
 
     <Button
         android:id="@+id/holdButton"
@@ -42,6 +42,6 @@
         android:layout_below="@id/stopButton"
         android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true"
-        android:text="Hold" />
+        android:text="@string/hold" />
 
 </RelativeLayout>
